# yalidine

./: .env.example  .gitignore  README.md  dev_requirements.txt  makefile  pyproject.toml
src/yalidine/: __init__.py  api.py  entity.py  settings.py
tests/: test_api.py
